--- a/Quote Generator Website/index.html
+++ b/Quote Generator Website/index.html
@@ -10,11 +10,11 @@
   <body>
     <div class="quote-box">
       <h2>Quote of the day</h1>
-      <blockquote>Loading...</blockquote>
-      <span>Loading...</span>
+      <blockquote id="quote">Loading...</blockquote>
+      <span id="author">Loading...</span>
       <div>
-        <button>New Quote</button>
-        <button> <img src="./Images/twitter.png" >Tweet </button>
+        <button onclick="getQuote(api_url)">New Quote</button>
+        <button onclick="tweet()"> <img src="./Images/twitter.png" >Tweet </button>
       </div>
     </div>
   </body>
